<resources>
    <string name="app_name">Wizard</string>
    <string name="home_textView_title">WIZARD</string>
    <string name="home_btn_play">PLAY</string>
    <string name="home_btn_settings">SETTINGS</string>
    <string name="home_btn_howToPlay">RULES</string>
    <string name="home_imgView_logo">Wizard Logo</string>
    <string name="lobby_textView_title">Sign up</string>
    <string name="lobby_textView_serverResponse">Server Response: </string>
    <string name="lobby_btn_testServer">TEST SERVER</string>
    <string name="lobby_btn_connect">CONNECT TO SERVER</string>
    <string name="lobby_btn_toGameScreen">START GAME</string>
    <string name="lobby_et_username">Enter your Name</string>
    <string name="str_vorhersage">Vorhersage?</string>
    <string name="play_card">PLAY CARD</string>
    <string name="popup_closeX">X</string>
    <!-- test string arrays -->
    <string-array name="list_items">
        <item>20</item>
        <item>10</item>
        <item>10</item>
        <item>70</item>
    </string-array>

    <!-- Scrollable Table Values -->
    <string name="title_activity_scrollabletable">Scrollable Table</string>
    <string name="col0Text">col0</string>
    <string name="col1Text">col1</string>
    <string name="col2Text">col2</string>
    <string name="col3Text">col3</string>
    <string name="col4Text">col4</string>
    <string name="col5Text">col5</string>
    <string name="namep1">nameP1</string>
    <string name="namep2">nameP2</string>
    <string name="namep3">nameP3</string>
    <string name="namep4">nameP4</string>
    <string name="namep5">nameP5</string>
    <string name="namep6">nameP6</string>
    <string name="tablecard1">tableCard1</string>
    <string name="tablecard2">tableCard2</string>
    <string name="tablecard3">tableCard3</string>
    <string name="tablecard4">tableCard4</string>
    <string name="tablecard5">tableCard5</string>
    <string name="tablecard6">tableCard6</string>
    <string name="block_of_truth">BLOCK OF TRUTH</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="exit_game">EXIT GAME</string>
    <string name="yourplayer">yourPlayer</string>
    <string name="cheat_dialog_title">Pick a player</string>
</resources>
