<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LobbyActivity">

    <TextView
        android:id="@+id/lobby_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lobby_textView_title"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/lobby_btn_testServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lobby_btn_testServer"
        android:layout_below="@+id/lobby_text_title"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/lobby_text_serverResponseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lobby_textView_serverResponse"
        android:layout_below="@+id/lobby_btn_testServer" />

    <TextView
        android:id="@+id/lobby_text_serverResponseDisplay"
        android:layout_width="213dp"
        android:layout_height="117dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:layout_toRightOf="@+id/lobby_text_serverResponseLabel"
    android:layout_alignTop="@+id/lobby_text_serverResponseLabel" />

    <Button
        android:id="@+id/lobby_btn_ToGameScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lobby_btn_toGameScreen"
        android:layout_below="@+id/lobby_edittext_username"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/lobby_edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/lobby_et_username"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lobby_text_serverResponseDisplay" />

    <ListView
        android:id="@+id/lobby_list_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/lobby_btn_ToGameScreen" />
</RelativeLayout>